# dino-park-cookie

./: .dockerignore  .travis.yml  Cargo.toml  Dockerfile.local  README.md  myke.yml
ci/: install_deps.sh
k8s/: Chart.yaml  values.yaml
k8s/templates/: deployment.yaml  service.yaml
src/: main.rs
terraform/codebuild/: provider.tf  variables.tf
