[package]
name = "dino-park-cookie"
version = "0.1.1"
authors = ["Florian Merz <flomerz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-cors = "0.2"
env_logger = "0.6"
